image error solved

--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 <div class="about-my-family-subsection">
                     <p>Covered Persons</p>  
                     <div class="about-my-family-photos">
-                        <img src="/images/covered-person1.jpg">
-                        <img src="/images/covered-person2.jpg">    
+                        <img src="./images/covered-person1.jpg">
+                        <img src="./images/covered-person2.jpg">    
                     </div>
                     <p>Beneficiary persons</p>
                     <div class="about-my-family-photos">
-                        <img src="/images/beneficiary-person1.jpg">
-                        <img src="/images/beneficiary-person2.jpg">
-                        <img src="/images/beneficiary-person3.jpg">
+                        <img src="./images/beneficiary-person1.jpg">
+                        <img src="./images/beneficiary-person2.jpg">
+                        <img src="./images/beneficiary-person3.jpg">
                     </div>
                     <p>Beneficiary persons</p>
                     <div class="about-my-family-photos">
-                        <img src="/images/emergency-person1.jpg">
-                        <img src="/images/emergency-person2.jpg">
-                        <img src="/images/emergency-person3.jpg">
-                        <img src="/images/emergency-person4.jpg">
+                        <img src="images/emergency-person1.jpg">
+                        <img src="images/emergency-person2.jpg">
+                        <img src="images/emergency-person3.jpg">
+                        <img src="images/emergency-person4.jpg">
                     </div>
                 </div>
             </div> 
@@ -180,9 +180,9 @@
                     <div class="card-text-photo">
                         <h1>New claims</h1>
                         <div class="card-photos">
-                            <img src="/images/beneficiary-person1.jpg"/>
-                            <img src="/images/beneficiary-person2.jpg"/>
-                            <img src="/images/beneficiary-person3.jpg"/>
+                            <img src="./images/beneficiary-person1.jpg"/>
+                            <img src="./images/beneficiary-person2.jpg"/>
+                            <img src="./images/beneficiary-person3.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -193,9 +193,9 @@
                     <div class="card-text-photo">
                         <h1>New members</h1>
                         <div class="card-photos">
-                            <img src="/images/covered-person1.jpg"/>
-                            <img src="/images/covered-person2.jpg"/>
-                            <img src="/images/emergency-person1.jpg"/>
+                            <img src="./images/covered-person1.jpg"/>
+                            <img src="./images/covered-person2.jpg"/>
+                            <img src="./images/emergency-person1.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -206,9 +206,9 @@
                     <div class="card-text-photo">
                         <h1>Total claims</h1>
                         <div class="card-photos">
-                            <img src="/images/emergency-person4.jpg"/>
-                            <img src="/images/emergency-person1.jpg"/>
-                            <img src="/images/covered-person1.jpg"/>
+                            <img src="./images/emergency-person4.jpg"/>
+                            <img src="./images/emergency-person1.jpg"/>
+                            <img src="./images/covered-person1.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
             <div class="under-card-section">
                 <div class="profile-card-container">
                     <div class="profile-card">
-                        <img src="/images/profile-card-2.jpg" />
+                        <img src="./images/profile-card-2.jpg" />
                         <div class="profile-card-details">
                             <div class="profile-detail-header">Jonas Abel</div>
                             <div class="profile-card-detail-container">
@@ -252,7 +252,7 @@
                         </button>
                     </div>
                     <div class="profile-card">
-                        <img src="/images/profile-card-1.jpg" />
+                        <img src="./images/profile-card-1.jpg" />
                         <div class="profile-card-details">
                             <div class="profile-detail-header">Amelia Kamani</div>
                             <div class="profile-card-detail-container">
@@ -286,7 +286,7 @@
                         </button>
                     </div>
                     <div class="profile-card">
-                        <img src="/images/profile-card-3.jpg" />
+                        <img src="./images/profile-card-3.jpg" />
                         <div class="profile-card-details">
                             <div class="profile-detail-header">Genevieve Juma</div>
                             <div class="profile-card-detail-container">
