image error solved 2

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                     </div>
                     <p>Beneficiary persons</p>
                     <div class="about-my-family-photos">
-                        <img src="images/emergency-person1.jpg">
-                        <img src="images/emergency-person2.jpg">
-                        <img src="images/emergency-person3.jpg">
-                        <img src="images/emergency-person4.jpg">
+                        <img src="./images/emergency-person1.jpg">
+                        <img src="./images/emergency-person2.jpg">
+                        <img src="./images/emergency-person3.jpg">
+                        <img src="./images/emergency-person4.jpg">
                     </div>
                 </div>
             </div> 
