--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="about-my-family-subsection">
                     <p>Covered Persons</p>  
                     <div class="about-my-family-photos">
-                        <img src="./images/covered-person1.jpg">
+                        <img src="images/covered-person1.jpg">
                         <img src="./images/covered-person2.jpg">    
                     </div>
                     <p>Beneficiary persons</p>
@@ -100,7 +100,7 @@
                         <img src="./images/emergency-person4.jpg">
                     </div>
                 </div>
-            </div> 
+            </div>  
 
             <div class="about-me-section">
                 <div class="sidebar-header-section">
