--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Test 2</title>
     <link rel="stylesheet" href="test2.css"> 
 </head> 
@@ -24,6 +27,7 @@
                 <svg class="notification-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
                 </svg>
+                <div class="alert-dot"></div>
                 <img src="images/profile.jpg" alt="profile-photo">
             </div>
         </nav>
@@ -183,6 +187,7 @@
                             <img src="./images/beneficiary-person1.jpg"/>
                             <img src="./images/beneficiary-person2.jpg"/>
                             <img src="./images/beneficiary-person3.jpg"/>
+                            <img src="./images/beneficiary-person3.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -196,6 +201,7 @@
                             <img src="./images/covered-person1.jpg"/>
                             <img src="./images/covered-person2.jpg"/>
                             <img src="./images/emergency-person1.jpg"/>
+                            <img src="./images/beneficiary-person3.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -209,6 +215,7 @@
                             <img src="./images/emergency-person4.jpg"/>
                             <img src="./images/emergency-person1.jpg"/>
                             <img src="./images/covered-person1.jpg"/>
+                            <img src="./images/beneficiary-person3.jpg"/>
                             <span class="card-more-photos">+32</span>
                         </div>
                     </div>
@@ -326,97 +333,98 @@
                         <h1>Activity</h1>
                         <div class="horizontal-line"></div>
                     </div>
-                    <div class="activity-section-main no-margin">
-                        <div class="activity-section-decor ">
-                            <div class="colored-dot blue"></div>
-                            <div class="activity-decor-line"></div>
+                    <div class="activity-setion-main-container">
+                        <div class="activity-section-main no-margin">
+                            <div class="activity-section-decor ">
+                                <div class="colored-dot blue"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot orange"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content ">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot orange"></div>
-                            <div class="activity-decor-line"></div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot green"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                        <div class="activity-section-content ">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot blue"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot green"></div>
-                            <div class="activity-decor-line"></div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot blue"></div>
-                            <div class="activity-decor-line"></div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
-                        </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot"></div>
-                            <div class="activity-decor-line"></div>
-                        </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
-                        </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot"></div>
-                            <div class="activity-decor-line"></div>
-                        </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
-                        </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot"></div>
-                            <div class="activity-decor-line"></div>
-                        </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
-                        </div>
-                    </div>
-                    <div class="activity-section-main">
-                        <div class="activity-section-decor">
-                            <div class="colored-dot"></div>
-                            <div class="activity-decor-line"></div>
-                        </div>
-                        <div class="activity-section-content">
-                            <span class="activity-content-title">Claimed $2000</span>
-                            <span class="activity-content-text">23 members are got claimed in wshington DC</span>
-                            <span class="activity-content-time">05:40pm</span>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div> 
-           
         </div>
     </div>
 
