--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="under-card-section">
                 <div class="profile-card-container">
                     <div class="profile-card">
-                        <img src="./images/profile-card-2.jpg" />
+                        <img src="./images/profile-card-1.webp" />
                         <div class="profile-card-details">
                             <div class="profile-detail-header">Jonas Abel</div>
                             <div class="profile-card-detail-container">
@@ -259,7 +259,7 @@
                         </button>
                     </div>
                     <div class="profile-card">
-                        <img src="./images/profile-card-1.jpg" />
+                        <img src="./images/profile-card-2.jpg" />
                         <div class="profile-card-details">
                             <div class="profile-detail-header">Amelia Kamani</div>
                             <div class="profile-card-detail-container">
@@ -295,7 +295,7 @@
                     <div class="profile-card">
                         <img src="./images/profile-card-3.jpg" />
                         <div class="profile-card-details">
-                            <div class="profile-detail-header">Genevieve Juma</div>
+                            <div class="profile-detail-header">Amelia Kamani</div>
                             <div class="profile-card-detail-container">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
@@ -351,6 +351,50 @@
                                 <div class="activity-decor-line"></div>
                             </div>
                             <div class="activity-section-content ">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
+                        </div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot green"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
+                        </div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot green"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
+                        </div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot green"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
+                                <span class="activity-content-title">Claimed $2000</span>
+                                <span class="activity-content-text">23 members are got claimed in wshington DC</span>
+                                <span class="activity-content-time">05:40pm</span>
+                            </div>
+                        </div>
+                        <div class="activity-section-main">
+                            <div class="activity-section-decor">
+                                <div class="colored-dot green"></div>
+                                <div class="activity-decor-line"></div>
+                            </div>
+                            <div class="activity-section-content">
                                 <span class="activity-content-title">Claimed $2000</span>
                                 <span class="activity-content-text">23 members are got claimed in wshington DC</span>
                                 <span class="activity-content-time">05:40pm</span>
